@@ -10,6 +10,7 @@
 - fix unlink of mount tree incorrectly causing autofs mount fail.
 - update kernel header file linux/auto_fs4.h.
 - update fix expire working harder than needed.
+- add missing check for zero length NIS key (Wengang Wang).
  
 14/01/2008 autofs-5.0.3
 -----------------------
